--- a/css/index.css
+++ b/css/index.css
@@ -356,6 +356,10 @@ footer {
     background-color: #FBEEF1;
 }
 
+#projectHero.playBg {
+    background-color: #F2F4FF;
+}
+
 #projectHero.videoBg {
     background-color: #F8F4FF;
 }
@@ -418,7 +422,7 @@ footer {
     margin-bottom: 20px;
 }
 
-.content-section .image-container span {
+.content-section .image-container span, .content-section .embed span {
     font-size: 16px;
     color: #999;
     text-align: center;
@@ -449,6 +453,9 @@ footer {
     .content-section .image-container, .content-section .embed {
         width: 1200px;
         margin: 40px auto;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
 }
 
