--- a/css/index.css
+++ b/css/index.css
@@ -442,6 +442,10 @@ footer {
     margin-bottom: 20px;
 }
 
+.content-section ul {
+    padding: 20px;
+}
+
 .content-section .image-container, .content-section .image-container-small {
     margin-bottom: 20px;
 }
@@ -545,6 +549,10 @@ footer {
     position: relative;
 }
 
+.container-med {
+    padding: 20px;
+}
+
 #aboutNav {
     display: none;
     position: sticky;
@@ -558,6 +566,14 @@ footer {
         position: relative;
         display: flex;
         width: 1200px;
+        margin: auto;
+    }
+
+    .container-med {
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        width: 960px;
         margin: auto;
     }
 
