--- a/css/index.css
+++ b/css/index.css
@@ -242,7 +242,7 @@ nav {
 
 .content h3 {
     line-height: 140%;
-    font-size: 24px;
+    font-size: 18px;
     margin: 16px 0;
     margin-top: 8px;
 }
@@ -295,6 +295,10 @@ nav {
 @media (min-width: 960px) {
     #portfolio {
         width: 960px;
+    }
+
+    .content h3 {
+        font-size: 18px;        
     }
 
     #portfolio h2 {
