--- a/css/index.css
+++ b/css/index.css
@@ -182,6 +182,8 @@ nav {
 }
 
 #hero .image {
+    display: flex;
+    align-items: center;
     padding: 0px;
     overflow: hidden;
     height: 375px;
