--- a/css/index.css
+++ b/css/index.css
@@ -392,6 +392,10 @@ footer {
     background-color: #FBEEF1;
 }
 
+#projectHero.instArtBg {
+    background-color: #F9F9F9;
+}
+
 #projectHero.playBg {
     background-color: #F2F4FF;
 }
@@ -475,6 +479,10 @@ footer {
 
 .content-section .embed > div {
     width: 100%;
+}
+
+.embed iframe {
+    border: none;
 }
 
 @media (min-width: 960px) {
@@ -643,5 +651,42 @@ footer {
         background-color: #fff;
         margin: auto;
         height: 400px;
+    }
+}
+
+#experiments {
+    padding: 0 20px;
+}
+
+#experiments h2 {
+    margin-top: 60px;
+    margin-bottom: 60px;
+    font-size: 36px;
+}
+
+.experiment-item {
+    margin-bottom: 30px;
+}
+
+.experiment-item span {
+    font-size: 14px;
+    margin-bottom: 5px;
+    display: block;
+}
+
+.experiment-item h3 {
+    margin: 0;
+    font-size: 18px;
+    padding: 0;
+}
+
+@media (min-width: 960px) {
+    #experiments {
+        width: 960px;
+        margin: auto;
+    }
+
+    .experiment-item {
+        width: 50%;
     }
 }
