--- a/css/index.css
+++ b/css/index.css
@@ -61,7 +61,7 @@ a:hover {
 }
 
 ul li, ol li {
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 }
 
 .image-container img, .image-container video {
@@ -473,6 +473,7 @@ footer {
 
 .content-section ul, .content-section ol {
     padding: 0 20px;
+    overflow: hidden;
 }
 
 .content-section .image-container, .content-section .image-container-small {
@@ -484,11 +485,19 @@ footer {
     display: block;
 }
 
-.content-section .image-container-small pre {
+.content-section .code-block {
     width: 100%;
+    font-family: monospace;
     box-sizing: border-box;
-    padding: 10px 60px;
     background-color: #f2f2f2;
+    padding: 20px;
+    margin-bottom: 20px;
+}
+
+.content-section .code-block p {
+    width: 100%;
+    margin: 0;
+    font-weight: 700;
 }
 
 .content-section .image-container span, .content-section .p5Embed span, .content-section .embed span, .image-container-small span, .video-container span {
@@ -525,6 +534,11 @@ footer {
 
 @media (min-width: 960px) {
 
+    .content-section .code-block {
+        width: 700px;
+        margin: auto;
+    }
+
     .p5Embed {
         width: 700px;
         padding-top: 40%;
@@ -551,7 +565,7 @@ footer {
         padding: 0;
     }
 
-    .content-section .image-container, .content-section .embed {
+    .content-section .image-container {
         width: 960px;
         margin: 40px auto;
         display: flex;
@@ -559,7 +573,15 @@ footer {
         align-items: center;
     }
 
-    .video-container { width: 960px; margin: 0 auto; position: relative; padding-bottom: 56%; padding-top: 30px; height: 0; overflow: hidden; }
+    .content-section .embed {
+        width: 700px;
+        margin: 40px auto;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .video-container { width: 700px; margin: 0 auto; position: relative; padding-bottom: 56%; padding-top: 30px; height: 0; overflow: hidden; }
     .video-container iframe, .video-container object, .video-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
 
     .content-section .image-container-small {
