--- a/css/index.css
+++ b/css/index.css
@@ -197,12 +197,26 @@ nav {
     padding: 20px;
 }
 
+section#hero .content p {
+    margin-bottom: 40px;
+}
+
+.content-section ul.bulleted-list {
+    list-style-type: disc;
+    padding: inherit;
+}
+
+ul.career-list li {
+    margin-bottom: 20px;
+}
+
 @media (min-width: 960px) {
     section#hero {
         width: 960px;
         display: flex;
         flex-direction: row;
         align-items: center;
+        justify-content: space-between;
         margin: 50px auto;
         gap: 50px;
         /* margin-bottom: 100px; */
@@ -216,8 +230,8 @@ nav {
 
     section#hero .image {
         /* width: 50%; */
-        width: 400px;
-        height: 400px;
+        width: 300px;
+        height: 300px;
         overflow: hidden;
     }
 
