--- a/css/index.css
+++ b/css/index.css
@@ -188,10 +188,16 @@ nav {
 
 #hero {
     display: flex;
-    flex-direction: column-reverse;
+    flex-direction: column;
     justify-content: center;
     width: 100%;
     margin-bottom: var(--spacing-xl);
+}
+
+.image span {
+    font-style: italic;
+    color: #aaa;
+    font-size: 12px;
 }
 
 #hero h2 {
@@ -370,7 +376,7 @@ footer {
     padding-bottom: 25px;
 }
 
-footer a:hover {
+.social a:hover {
     background-color: #fff;
 }
 
@@ -404,7 +410,6 @@ footer a:hover {
     width: 80%;
     margin: 0px auto;
     font-size: 12px;
-    color: #666;
 }
 
 /* Project Hero */
@@ -756,48 +761,3 @@ footer a:hover {
         height: 400px;
     }
 }
-<<<<<<< HEAD
-
-#experiments {
-    padding: 0 20px;
-}
-
-#experiments h2 {
-    margin: 20px 0;
-    font-size: 36px;
-}
-
-@media (min-width: 960px) {
-    #experiments h2 {
-        margin: 40px 0;
-    }
-}
-
-.experiment-item {
-    margin-bottom: 30px;
-}
-
-.experiment-item span {
-    font-size: 14px;
-    margin-bottom: 5px;
-    display: block;
-}
-
-.experiment-item h3 {
-    margin: 0;
-    font-size: 18px;
-    padding: 0;
-}
-
-@media (min-width: 960px) {
-    #experiments {
-        width: 960px;
-        margin: auto;
-    }
-
-    .experiment-item {
-        width: 50%;
-    }
-}
-=======
->>>>>>> 74b7c593b81984b153560f79ad63ef885beb16e4
